🐛 fix(style.scss): change display value of .wp-block-spacer on mobile to 'hidden' instead of 'block' to fix inline display override issue

--- a/src/style.scss
+++ b/src/style.scss
@@ -22,7 +22,7 @@
 
 @media screen and (max-width: 1024px) {
 	.wp-block-spacer {
-		display: var(--spacerMobileShow, block) !important; /* override inline display */
+		display: var(--spacerMobileShow, hidden) !important; /* override inline display */
 		height: var(--spacerMobileHeight, 1rem) !important; /* override inline height */
 	}
 }
